@@ -36,7 +36,7 @@ method run_server ($version) {
     # Start activemq in a subprocess
     warn("Running @cmd\n");
     my $h = start \@cmd, \undef;
-
+    my $pid = $h->{KIDS}[0]{PID}; # FIXME!
     # Spin until we can get a connection
     my ($stomp, $loop_count);
     while (! $stomp) {
@@ -53,9 +53,7 @@ method run_server ($version) {
 
     return Scope::Guard->new(sub {
         warn("Killing ApacheMQ...");
-        $h->signal ( "KILL" ) if $h; # FIXME - Need to get the PID out of the process
-                                     #         earlier, as $h can have gone away if we get
-                                     #         here in global destruction.
+        $h ? $h->signal ( "KILL" ) : kill $pid, 15;
     });
 }
 
